--- a/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/Pages/CharacterLevelUp_c.xaml
+++ b/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/Pages/CharacterLevelUp_c.xaml
@@ -386,7 +386,7 @@
 
                                             <ListBoxItem x:Name="raceTab" Tag="race" Visibility="Collapsed"/>
                                             <!-- MOD START -->
-                                            <ListBoxItem x:Name="subRaceTab" Tag="subrace" Visibility="Collapsed">
+                                            <ListBoxItem x:Name="subRaceTab" Tag="subrace" Visibility="Collapsed"/>
                                             <!-- MOD END -->
 
                                             <ListBoxItem x:Name="deityTab" Tag="deity" Visibility="{Binding SelectableDeities.Count, Converter={StaticResource CountToVisibilityConverter}}"/>
